# ray-tracer

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  raytrace.bat
scenes/: bouncing_spheres.json  checkered_spheres.json  cornell_box.json  cornell_smoke.json  earth.json  final_scene.json  perlin_spheres.json  pyramid.json  quads.json  simple_light.json  sphere.json
scripts/: bouncing_spheres.py  final_scene.py  perlin_spheres.py  pyramid.py  quads.py  scene_defs.py
src/: aabb.h  bvh.h  camera.h  color.h  hittable.h  hittable_list.h  interval.h  main.cpp  material.h  perlin.h  quad.h  ray.h  raytracer.h  renderer.h  rt_stb_image.h  scene_reader.h  sphere.h  texture.h  thread_pool.h  vec3.h  window.h
src/geometry/: constant_medium.h  quad.h  sphere.h  tri.h
src/math/: ray.h  vec3.h
